--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 	<section class="sobre" id="sobre">
 		<div class="content-sobre">
-			<h3>Seja um Voluntário <span>Life Earth</span></h3>
+			<h3>Seja um Voluntário <span>LifeEarth</span></h3>
 			<p>Lorem Ipsum is simply dummy text of the printing <br>
 				and typesetting industry. Lorem Ipsum has been the <br>
 				industry's standard dummy text ever since the 1500s, <br>
@@ -79,7 +79,7 @@
 				scrambled it to make a type specimen book. It has <br>
 				survived not only five centuries, but also the leap into <br>
 				electronic typesetting, remaining essentially unchanged. <br>
-				It was popularised in the 1960s with the release of Letraset <br>sheets containing Lorem</p>
+				It was popularised in the 1960s with the release of Letraset <br>sheets containing Lorem.</p>
 			<a href="#" class="btn-sobre">Ser Voluntário</a>
 		</div>
 
