--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				industry's standard dummy text ever since the 1500s, <br>
 				when an unknown printer took a galley of type and <br>
 				scrambled it to make a type specimen book. It has <br>
-				survived not only five centuries, but also the leap into <br>
+				survived not onldy five centuries, but also the leap into <br>
 				electronic typesetting, remaining essentially unchanged. <br>
 				It was popularised in the 1960s with the release of Letraset <br>sheets containing Lorem.</p>
 			<a href="#" class="btn-sobre">Ser Voluntário</a>
