--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				when an unknown printer took a galley of type and <br>
 				scrambled it to make a type specimen book. It has <br>
 				survived not onldy five centuries, but also the leap into <br>
-				electronic typesetting, remaining essentially unchanged. <br>
+				electronic typesetting, remsaining essentially unchanged. <br>
 				It was popularised in the 1960s with the release of Letraset <br>sheets containing Lorem.</p>
 			<a href="#" class="btn-sobre">Ser Voluntário</a>
 		</div>
