--- a/cadastro_login.html
+++ b/cadastro_login.html
@@ -26,21 +26,19 @@
           </p>
 
           <p>
-            <label for="passwordLog">Senha</label>
-            <input id="passwordLog" name="password" required="required" type="password" placeholder="ex. senha" />
+            <label for="senhaLog">Senha</label>
+            <input id="senhaLog" name="password" required="required" type="password" placeholder="ex. senha" />
           </p>
 
           <p>
             <button type="submit" id="submitAuthFormLog">Acessar</button>
           </p>
-          
+
           <p class="link">
             Ainda não é voluntário?
             <a href="#paracadastro">Cadastre-se</a>
           </p>
         </form>
-
-
       </div>
 
 
@@ -50,28 +48,29 @@
           <h1>Cadastro</h1>
 
           <p>
-            <label for="nomeCad">Nome Completo</label>
-            <input id="nomeCad" name="nomeCad" required="required" type="text" placeholder="Nome" />
+            <label for="nome">Nome Completo</label>
+            <input id="nome" name="nome" required="required" type="text" placeholder="Nome" />
           </p>
 
           <p>
-            <label for="emailCad">E-mail</label>
-            <input id="emailCad" name="emailCad" required="required" type="email" placeholder="contato@lifeearth.com" />
+            <label for="email">E-mail</label>
+            <input id="email" name="email" required="required" type="email" placeholder="contato@lifeearth.com" />
           </p>
 
           <p>
-            <label for="senhaCad">Senha</label>
-            <input id="passwordCad" name="senha" required="required" type="password" placeholder="ex. 123456" />
+            <label for="senha">Senha</label>
+            <input id="senha" name="senha" required="required" type="password" placeholder="ex. 123456" />
           </p>
 
           <p>
-            <label for="senhaCad">Confirme a Senha</label>
-            <input id="senhaCad" name="senha" required="required" type="password" placeholder="confirmação de senha" />
+            <label for="senhaCheck">Confirme a Senha</label>
+            <input id="senhaCheck" name="senhaCheck" required="required" type="password"
+              placeholder="confirmação de senha" />
           </p>
 
           <p>
-            <label for="dateCad">Data de Nascimento</label>
-            <input id="dateCad" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX" />
+            <label for="date">Data de Nascimento</label>
+            <input id="date" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX" />
           </p>
 
           <p>
@@ -90,11 +89,13 @@
   <!--Recursos do Firebase-->
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-database.js"></script>
 
   <!--Nossa programação em JavaScript-->
   <script src="js/firebase.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/util.js"></script>
+  <script src="js/database.js"></script>
 
 </body>
 
