--- a/cadastro_login.html
+++ b/cadastro_login.html
@@ -8,81 +8,74 @@
   <link rel="stylesheet" type="text/css" href="./css/log_cad.css" />
 </head>
 
-<body class="gradient">
-  <div class="container">
-    <a class="links" id="paracadastro"></a>
-    <a class="links" id="paralogin"></a>
+<body>
+  <div class="cont">
+    <div class="form sign-in">
+      <form id="authFormLog" method="post" action="">
+      <h2>Entrar</h2>
+      <label for="emailLog">
+        <span >E-mail</span>
+        <input id="emailLog" name="emailLog" required="required" type="email" placeholder="ex. contato@lifeearth.com">
+      </label>
+      <label for="senhaLog">
+        <span >Senha</span>
+        <input id="senhaLog" name="senhaLog" required="required" type="password" placeholder="ex. senha">
+      </label>
+      <button class="submit" type="submit" id="submitAuthFormLog">Entrar</button>
+      <p class="forgot-pass">Esqueceu a senha ?</p>
+      <p class="acess">Acessar com:</p>
 
-    <div class="content">
-
-      <!--FORMULÁRIO DE LOGIN-->
-      <div id="login">
-        <form id="authFormLog" method="post" action="">
-          <h1>Login</h1>
-          <p>
-            <label for="emailLog">E-mail</label>
-            <input id="emailLog" name="email" required="required" type="email"
-              placeholder="ex. contato@lifeearth.com" />
-          </p>
-
-          <p>
-            <label for="senhaLog">Senha</label>
-            <input id="senhaLog" name="password" required="required" type="password" placeholder="ex. senha" />
-          </p>
-
-          <p>
-            <button type="submit" id="submitAuthFormLog">Acessar</button>
-          </p>
-
-          <p class="link">
-            Ainda não é voluntário?
-            <a href="#paracadastro">Cadastre-se</a>
-          </p>
-        </form>
+      <div class="social-media">
+        <ul>
+          <li><img src="images/facebook.png"></li>
+          <li><img src="images/google.png"></li>
+        </ul>
       </div>
+      </form>
+    </div>
 
 
-      <!--FORMULÁRIO DE CADASTRO-->
-      <div id="cadastro">
+    <div class="sub-cont">
+      <div class="img">
+        <div class="img-text m-up">
+          <h2> Ainda não é voluntário?</h2>
+          <p>Cadastre-se e descubra uma grande quantidade de novas oportunidades para torna-se um voluntário!</p>
+        </div>
+        <div class="img-text m-in">
+          <h2>É voluntário?</h2>
+          <p>Se você já é um voluntário e possui uma conta, basta acessar</p>
+        </div>
+        <div class="img-btn">
+          <span class="m-up">Cadastre-se</span>
+          <span class="m-in">Acessar</span>
+        </div>
+      </div>
+      <div id="cadastro" class="form sign-up">
         <form id="authFormCad" method="post" action="">
-          <h1>Cadastro</h1>
-
-          <p>
-            <label for="nome">Nome Completo</label>
-            <input id="nome" name="nome" required="required" type="text" placeholder="Nome" />
-          </p>
-
-          <p>
-            <label for="email">E-mail</label>
-            <input id="email" name="email" required="required" type="email" placeholder="contato@lifeearth.com" />
-          </p>
-
-          <p>
-            <label for="senha">Senha</label>
-            <input id="senha" name="senha" required="required" type="password" placeholder="ex. 123456" />
-          </p>
-
-          <p>
-            <label for="senhaCheck">Confirme a Senha</label>
-            <input id="senhaCheck" name="senhaCheck" required="required" type="password"
-              placeholder="confirmação de senha" />
-          </p>
-
-          <p>
-            <label for="date">Data de Nascimento</label>
-            <input id="date" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX" />
-          </p>
-
-          <p>
-            <button type="submit" id="submitAuthFormCad">Cadastrar</button>
-          </p>
-
-          <p class="link">
-            Já é voluntário?
-            <a href="#paralogin"> Acesse sua Conta </a>
-          </p>
-        </form>
+        <h2>Cadastro</h2>
+        <label for="nome">
+          <span >Nome</span>
+          <input id="nome" name="nome" required="required" type="text" placeholder="Nome">
+        </label>
+        <label for="email">
+          <span>Email</span>
+          <input id="email" name="email" required="required" type="email" placeholder="contato@lifeearth.com">
+        </label>
+        <label for="senha">
+          <span >Senha</span>
+          <input id="senha" name="senha" required="required" type="password" placeholder="ex. 123456">
+        </label>
+        <label for="senhaCheck">
+          <span >Confirme a Senha</span>
+          <input id="senhaCheck" name="senhaCheck" required="required" type="password" placeholder="confirmação de senha">
+        </label>
+        <label for="date">
+          <span >Data de Nascimento</span>
+          <input id="date" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX">
+        </label>
+        <button type="submit" class="submit" id="submitAuthFormCad">Cadastrar</button>
       </div>
+      </form>
     </div>
   </div>
 
@@ -90,12 +83,13 @@
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-database.js"></script>
-
+  
   <!--Nossa programação em JavaScript-->
   <script src="js/firebase.js"></script>
   <script src="js/auth.js"></script>
-  <script src="js/util.js"></script>
+  <script src="js/login.js"></script>
   <script src="js/database.js"></script>
+  <script src="js/util.js"></script>
 
 </body>
 
