Link do participar para login

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 2 -->
@@ -130,7 +130,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 3 -->
@@ -150,7 +150,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 4 -->
@@ -170,7 +170,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 5 -->
@@ -190,7 +190,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 6 -->
@@ -210,7 +210,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 7 -->
@@ -230,7 +230,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 8 -->
@@ -250,7 +250,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 9 -->
@@ -270,7 +270,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 					<!-- 10 -->
@@ -292,7 +292,7 @@
 							</ul>
 							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
 								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="#">Participar</a>
+							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
 				</div>
