Inserção de mais páginas

--- a/index.html
+++ b/index.html
@@ -48,13 +48,7 @@
 			<h1>LifeEarth<br>Salve o planeta Terra </h1>
 		</div>
 		<div class="content">
-			<h1>LifeEarth<br>Salve o planeta Terra </h1>
-		</div>
-		<div class="content">
-			<h1>LifeEarth<br>Salve o planeta Terra </h1>
-		</div>
-		<div class="content">
-			<h1>LifeEarth<br>Salve o planeta Terra </h1>
+			<h1>LifeEarth<br>A Terra com Mais Vida </h1>
 		</div>
 		<div class="media-icons">
 			<a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
@@ -72,14 +66,14 @@
 	<section class="sobre" id="sobre">
 		<div class="content-sobre">
 			<h3>Seja um Voluntário <span>LifeEarth</span></h3>
-			<p>Lorem Ipsum is simply dummy text of the printing <br>
-				and typesetting industry. Lorem Ipsum has been the <br>
-				industry's standard dummy text ever since the 1500s, <br>
-				when an unknown printer took a galley of type and <br>
-				scrambled it to make a type specimen book. It has <br>
-				survived not onldy five centuries, but also the leap into <br>
-				electronic typesetting, remsaining dessentially unchanged. <br>
-				It was popularised in the 1860s with the release of Letraset <br>sheets containing Lorem.</p>
+			<p> Somos um grupo universitário, onde buscamos pessoas <br>
+				que estejam do mesmo lado da força e do bem maior para nosso planeta, Terra. <br>
+				A iniciativa veio para que as pesssoas se concientizem, <br>
+				e possa contribuir com o desenvolvimento, seja florestas, praias, cidades, ou demais ambientes.  <br>
+				Somos o LifeEarth, cada dia mais próximo de uma busca constante, de uma melhora para a Terra.  <br>
+				Buscamos pessoas para integrar no time e vestir a camisa do time, <br>
+				Juntar-se com amigos e fazer amizades novas também faz parte, LifeEarth. <br>
+				Juntos, somos mais <br>juntos somos melhores.</p>
 			<a href="#" class="btn-sobre">Ser Voluntário</a>
 		</div>
 
@@ -103,13 +97,12 @@
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Preservação da Floresta, limpeza</h2>
 							<ul>
 								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Salomão de Andrade</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Pessoal, estamos em busca de 20 voluntários, para limpeza e cultivo e plantação na floresta.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -117,19 +110,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="./images/evento.jpg" alt="">
 							<div class="news-grid-box">
-								<h1>12</h1>
+								<h1>14</h1>
 								<p>Dez</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>limpeza de Ambiente Acessível a Praia</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 14, 2021</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Gardenia Paiva</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Precisamos de 15 pessoas disponíveis para um intensivo, de limpeza ao percurso que da acesso a praia de boa viagem.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -137,19 +129,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="./images/evento10.jpg" alt="">
 							<div class="news-grid-box">
-								<h1>12</h1>
-								<p>Dez</p>
+								<h1>16</h1>
+								<p>Jan</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Plantação de novas plantas medicinais</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 16, 2022</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Elton Gerard</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Convido a todos que sentirem de ajudar a plantar no jardim baobá um acesso medicinal, de plantas que possibilita a fazer chá de camomila.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -157,19 +148,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="images/4.jpg" alt="">
 							<div class="news-grid-box">
-								<h1>12</h1>
-								<p>Dez</p>
+								<h1>18</h1>
+								<p>Jan</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Limpeza de Praia</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 18, 2022</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Robson Nakamura</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Venho através do lifeEarth, convidar até 25 pessoas, disponíveis para limpar a praia de Suape-PE.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -177,19 +167,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="images/5.jpg" alt="">
 							<div class="news-grid-box">
-								<h1>12</h1>
-								<p>Dez</p>
+								<h1>24</h1>
+								<p>Jan</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Jardinagem</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 24, 2022</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Alan Bittencourt</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Necessitamos de 22 pessoas para jardinagem no hospital Real Português, com acesso a coffee break.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -197,19 +186,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="./images/evento6.png" alt="">
 							<div class="news-grid-box">
-								<h1>12</h1>
-								<p>Dez</p>
+								<h1>26</h1>
+								<p>Jan</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Intensivão de Limpeza</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 12, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 26, 2022</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Gilson Damascovichz</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Convido a todos os voluntários para uma caminhada com parada para lanche, para limpar 3 bairros do Recife. Madalena, Graças e Derby.</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
@@ -217,81 +205,18 @@
 					<div class="news-grid">
 						<div class="news-grid-image"><img src="./images/evento3.png" alt="">
 							<div class="news-grid-box">
-								<h1>13</h1>
-								<p>Dez</p>
+								<h1>30</h1>
+								<p>Jan</p>
 							</div>
 						</div>
 						<div class="news-grid-txt">
 							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
+							<h2>Aulão de Como limpar e Preservar o ambiente</h2>
 							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 13, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
+								<li><i class="fa fa-calendar" aria-hidden="true"></i> Jan 30, 2022</li>
+								<li><i class="fa fa-user" aria-hidden="true"></i> Prof. Genielson</li>
 							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="./cadastro_login.html">Participar</a>
-						</div>
-					</div>
-					<!-- 8 -->
-					<div class="news-grid">
-						<div class="news-grid-image"><img src="./images/evento10.jpg" alt="">
-							<div class="news-grid-box">
-								<h1>13</h1>
-								<p>Dez</p>
-							</div>
-						</div>
-						<div class="news-grid-txt">
-							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 13, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
-							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="./cadastro_login.html">Participar</a>
-						</div>
-					</div>
-					<!-- 9 -->
-					<div class="news-grid">
-						<div class="news-grid-image"><img src="./images/evento.jpg" alt="">
-							<div class="news-grid-box">
-								<h1>13</h1>
-								<p>Dez</p>
-							</div>
-						</div>
-						<div class="news-grid-txt">
-							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 13, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
-							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
-							<a href="./cadastro_login.html">Participar</a>
-						</div>
-					</div>
-					<!-- 10 -->
-					<div class="news-grid">
-						<div class="news-grid-image"><img
-								src="./images/kisspng-environmental-protection-natural-environment-compu-5ae660b91247f9.1663781415250474810749.png"
-								alt="">
-							<div class="news-grid-box">
-								<h1>13</h1>
-								<p>Dez</p>
-							</div>
-						</div>
-						<div class="news-grid-txt">
-							<span>Categoria</span>
-							<h2>Nome do Evento</h2>
-							<ul>
-								<li><i class="fa fa-calendar" aria-hidden="true"></i> Dez 13, 2021</li>
-								<li><i class="fa fa-user" aria-hidden="true"></i> Organizador</li>
-							</ul>
-							<p>Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur aspernatur
-								reprehenderit velit est voluptatum, voluptas amet quasi dicta consectetur.</p>
+							<p>Caros voluntários, estou marcando um aulão no dia 30 de janeiro de 2022, para ensinar algumas boas praticas a todos, sem limites de pessoas...</p>
 							<a href="./cadastro_login.html">Participar</a>
 						</div>
 					</div>
