adicionar botões facebook e google comentados

--- a/dashboard.html
+++ b/dashboard.html
@@ -500,3 +500,10 @@
     </div>
   </body>
 </html>
+
+<!--
+Botão de Logout!!
+<p class="text-center">
+   <button class="btn btn-lg btn-block btn-default" id="logOutButton">Sair</button>
+</p>
+-->
