exposicao dos nomes no dashboard

--- a/form_eventos.html
+++ b/form_eventos.html
@@ -116,10 +116,10 @@
             <form action="">
                 <fieldset>
                     <div class="row">
-                        <label for="nome">Nome</label>
-                        <input type="text" id="nome" name="nome" placeholder="Digite seu nome" autocomplete="off" required>
+                        <label for="nome">Nome do Evento</label>
+                        <input type="text" id="eventoNome" name="eventoNome" placeholder="Digite o nome do seu evento" autocomplete="off" required>
                     </div>
-                    <div class="row">
+                   <!-- <div class="row">
                         <label for="sobrenome">Sobrenome</label>
                         <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome" autocomplete="off"
                             required>
@@ -127,14 +127,14 @@
                     <div class="row">
                         <label for="email">E-mail</label>
                         <input type="email" id="email" name="email" placeholder="e-mail" autocomplete="off" required>
-                    </div>
+                    </div>-->
                     <div class="row">
                         <label for="dtevent">Data do Evento</label>
                         <input type="date" id="dtevent" name="dtevent">
                     </div>
                     <div class="row">
                       <label for="filhos">Número de Voluntários:</label>
-                      <input type="number" id="Voluntários" name="Voluntários" max="1000" min="1">
+                      <input type="number" id="voluntarios" name="Voluntários" max="1000" min="1">
                   </div>
                     <div class="row"></div>
                 </fieldset>
