--- a/cadastro_login.html
+++ b/cadastro_login.html
@@ -12,25 +12,25 @@
   <div class="cont">
     <div class="form sign-in">
       <form id="authFormLog" method="post" action="">
-      <h2>Entrar</h2>
-      <label for="emailLog">
-        <span >E-mail</span>
-        <input id="emailLog" name="emailLog" required="required" type="email" placeholder="ex. contato@lifeearth.com">
-      </label>
-      <label for="senhaLog">
-        <span >Senha</span>
-        <input id="senhaLog" name="senhaLog" required="required" type="password" placeholder="ex. senha">
-      </label>
-      <button class="submit" type="submit" id="submitAuthFormLog">Entrar</button>
-      <p class="forgot-pass">Esqueceu a senha ?</p>
-      <p class="acess">Acessar com:</p>
+        <h2>Entrar</h2>
+        <label for="emailLog">
+          <span>E-mail</span>
+          <input id="emailLog" name="emailLog" required="required" type="email" placeholder="ex. contato@lifeearth.com">
+        </label>
+        <label for="senhaLog">
+          <span>Senha</span>
+          <input id="senhaLog" name="senhaLog" required="required" type="password" placeholder="ex. senha">
+        </label>
+        <button class="submit" type="submit" id="submitAuthFormLog">Entrar</button>
+        <p class="forgot-pass">Esqueceu a senha?</p>
+        <p class="acess">Acessar com:</p>
 
-      <div class="social-media">
-        <ul>
-          <li><img src="images/facebook.png"></li>
-          <li><img src="images/google.png"></li>
-        </ul>
-      </div>
+        <div class="social-media">
+          <ul>
+            <li><img src="images/facebook.png"></li>
+            <li><img src="images/google.png"></li>
+          </ul>
+        </div>
       </form>
     </div>
 
@@ -52,30 +52,31 @@
       </div>
       <div id="cadastro" class="form sign-up">
         <form id="authFormCad" method="post" action="">
-        <h2>Cadastro</h2>
-        <label for="nome">
-          <span >Nome</span>
-          <input id="nome" name="nome" required="required" type="text" placeholder="Nome">
-        </label>
-        <label for="email">
-          <span>Email</span>
-          <input id="email" name="email" required="required" type="email" placeholder="contato@lifeearth.com">
-        </label>
-        <label for="senha">
-          <span >Senha</span>
-          <input id="senha" name="senha" required="required" type="password" placeholder="ex. 123456">
-        </label>
-        <label for="senhaCheck">
-          <span >Confirme a Senha</span>
-          <input id="senhaCheck" name="senhaCheck" required="required" type="password" placeholder="confirmação de senha">
-        </label>
-        <label for="date">
-          <span >Data de Nascimento</span>
-          <input id="date" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX">
-        </label>
-        <button type="submit" class="submit" id="submitAuthFormCad">Cadastrar</button>
+          <h2>Cadastro</h2>
+          <label for="nome">
+            <span>Nome</span>
+            <input id="nome" name="nome" required="required" type="text" placeholder="Nome">
+          </label>
+          <label for="email">
+            <span>Email</span>
+            <input id="email" name="email" required="required" type="email" placeholder="contato@lifeearth.com">
+          </label>
+          <label for="senha">
+            <span>Senha</span>
+            <input id="senha" name="senha" required="required" type="password" placeholder="ex. 123456">
+          </label>
+          <label for="senhaCheck">
+            <span>Confirme a Senha</span>
+            <input id="senhaCheck" name="senhaCheck" required="required" type="password"
+              placeholder="confirmação de senha">
+          </label>
+          <label for="date">
+            <span>Data de Nascimento</span>
+            <input id="date" name="date" required="required" type="date" placeholder="ex. XX/XX/XXXX">
+          </label>
+          <button type="submit" class="submit" id="submitAuthFormCad">Cadastrar</button>
+        </form>
       </div>
-      </form>
     </div>
   </div>
 
@@ -83,13 +84,13 @@
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.8.1/firebase-database.js"></script>
-  
+
   <!--Nossa programação em JavaScript-->
   <script src="js/firebase.js"></script>
   <script src="js/auth.js"></script>
   <script src="js/login.js"></script>
   <script src="js/database.js"></script>
-  <script src="js/util.js"></script>
+  <script src="js/utils.js"></script>
 
 </body>
 
