alteração das imagens

--- a/chat.html
+++ b/chat.html
@@ -100,7 +100,7 @@
                 <span class="profile__name">Juliana</span>
                 <img
                   class="profile__img"
-                  src="./images/gardenia.png"
+                  src="./images/profile.png"
                   alt="Profile picture"
                   loading="lazy"
                 />
@@ -150,7 +150,7 @@
             >
               <img
                 class="profile-main__photo"
-                src="./images/gardenia.png"
+                src="./images/profile.png"
                 alt="Profile photo"
               />
             </button>
