--- a/dashboard.html
+++ b/dashboard.html
@@ -317,8 +317,9 @@
 
   <!--Nossa programação em JavaScript-->
   <script src="js/firebase.js"></script>
-  <script src="js/utils.js"></script>
+  <script src="js/util.js"></script>
   <script src="js/index.js"></script>
+  <script src="js/utils.js"></script>
 
 </body>
 
