--- a/form_eventos.html
+++ b/form_eventos.html
@@ -97,10 +97,10 @@
             </form>
             <div class="profile">
               <button class="profile__button">
-                <span class="profile__name">Juliana</span>
+                <span class="profile__name"></span>
                 <img
                   class="profile__img"
-                  src="./images/gardenia.png"
+                  src="./images/profile.png"
                   alt="Profile picture"
                   loading="lazy"
                 />
@@ -199,11 +199,11 @@
             >
               <img
                 class="profile-main__photo"
-                src="./images/gardenia.png"
+                src="./images/profile.png"
                 alt="Profile photo"
               />
             </button>
-            <h1 class="profile-main__name">Juliana</h1>
+            <h1 class="profile-main__name"></h1>
           </div>
           <ul class="statistics">
             <li class="statistics__entry">
