--- a/eventos.html
+++ b/eventos.html
@@ -99,10 +99,10 @@
             </form>
             <div class="profile">
               <button class="profile__button">
-                <span class="profile__name">Juliana</span>
+                <span class="profile__name"></span>
                 <img
                   class="profile__img"
-                  src="./images/gardenia.png"
+                  src="./images/profile.png"
                   alt="Profile picture"
                   loading="lazy"
                 />
@@ -302,11 +302,11 @@
             >
               <img
                 class="profile-main__photo"
-                src="./images/gardenia.png"
+                src="./images/profile.png"
                 alt="Profile photo"
               />
             </button>
-            <h1 class="profile-main__name">Juliana</h1>
+            <h1 class="profile-main__name"></h1>
           </div>
           <ul class="statistics">
             <li class="statistics__entry">
@@ -326,8 +326,5 @@
         </section>
       </aside>
     </div>
-
-    <script src="js/utils.js"></script>
-
   </body>
 </html>
