remoção de alguns icones

--- a/cadastro_login.html
+++ b/cadastro_login.html
@@ -6,6 +6,9 @@
   <title>Acesso | LifeEarth</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./css/log_cad.css" />
+  <link rel="apple-touch-icon" sizes="57x57" href="./images/logo.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./images/logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/logo.png">
 </head>
 
 <body>
