--- a/dashboard.html
+++ b/dashboard.html
@@ -8,6 +8,9 @@
   <title>LifeEarth | Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="./css/dash.css" />
+  <link rel="apple-touch-icon" sizes="57x57" href="./images/logo.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./images/logo.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="./images/logo.png">
 </head>
 
 <body class="gradient">
@@ -115,18 +118,6 @@
         <header class="section__header">
           <h2 class="section__title">Comunidade</h2>
           <div class="section__control">
-            <button class="section__button focus--box-shadow" type="button" aria-label="Filter projects">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="presentation">
-                <path
-                  d="M20,8.18V3a1,1,0,0,0-2,0V8.18a3,3,0,0,0,0,5.64V21a1,1,0,0,0,2,0V13.82a3,3,0,0,0,0-5.64ZM19,12a1,1,0,1,1,1-1A1,1,0,0,1,19,12Zm-6,2.18V3a1,1,0,0,0-2,0V14.18a3,3,0,0,0,0,5.64V21a1,1,0,0,0,2,0V19.82a3,3,0,0,0,0-5.64ZM12,18a1,1,0,1,1,1-1A1,1,0,0,1,12,18ZM6,6.18V3A1,1,0,0,0,4,3V6.18a3,3,0,0,0,0,5.64V21a1,1,0,0,0,2,0V11.82A3,3,0,0,0,6,6.18ZM5,10A1,1,0,1,1,6,9,1,1,0,0,1,5,10Z" />
-              </svg>
-            </button>
-            <button class="section__button section__button--painted focus--box-shadow" type="button"
-              aria-label="Add New project">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="presentation">
-                <path d="M19,11H13V5a1,1,0,0,0-2,0v6H5a1,1,0,0,0,0,2h6v6a1,1,0,0,0,2,0V13h6a1,1,0,0,0,0-2Z" />
-              </svg>
-            </button>
           </div>
         </header>
         <ul class="project">
@@ -270,21 +261,6 @@
     </main>
     <aside class="aside">
       <section class="section">
-        <div class="aside__control">
-          <button class="aside__button focus--box-shadow" type="button" aria-label="Close profile settings">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="presentation">
-              <path
-                d="M17,11H9.41l3.3-3.29a1,1,0,1,0-1.42-1.42l-5,5a1,1,0,0,0-.21.33,1,1,0,0,0,0,.76,1,1,0,0,0,.21.33l5,5a1,1,0,0,0,1.42,0,1,1,0,0,0,0-1.42L9.41,13H17a1,1,0,0,0,0-2Z" />
-            </svg>
-          </button>
-          <button class="aside__button aside__button--notification focus--box-shadow" type="button"
-            aria-label="You have new feedback">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="presentation">
-              <path
-                d="M18,13.18V10a6,6,0,0,0-5-5.91V3a1,1,0,0,0-2,0V4.09A6,6,0,0,0,6,10v3.18A3,3,0,0,0,4,16v2a1,1,0,0,0,1,1H8.14a4,4,0,0,0,7.72,0H19a1,1,0,0,0,1-1V16A3,3,0,0,0,18,13.18ZM8,10a4,4,0,0,1,8,0v3H8Zm4,10a2,2,0,0,1-1.72-1h3.44A2,2,0,0,1,12,20Zm6-3H6V16a1,1,0,0,1,1-1H17a1,1,0,0,1,1,1Z" />
-            </svg>
-          </button>
-        </div>
         <div class="profile-main">
           <button class="profile-main__setting focus--box-shadow" type="button">
             <img class="profile-main__photo" src="./images/profile.png" alt="Profile photo" />
@@ -294,14 +270,14 @@
         <ul class="statistics">
           <li class="statistics__entry">
             <a class="statistics__entry-description" href="#">Eventos Ingressados</a><span
-              class="statistics__entry-quantity">5</span>
+              class="statistics__entry-quantity">0</span>
           </li>
           <li class="statistics__entry">
             <a class="statistics__entry-description" href="#">Eventos Criados</a><span
-              class="statistics__entry-quantity">3</span>
+              class="statistics__entry-quantity">0</span>
           </li>
           <li class="statistics__entry">
-            <a class="statistics__entry-description" href="#">Avaliação</a><span class="statistics__entry-quantity">10 ♥
+            <a class="statistics__entry-description" href="#">Avaliação</a><span class="statistics__entry-quantity">0 ♥
             </span>
           </li>
         </ul>
